[FIX] website_sale: fix product hover buttons overflow
Issue

	- Install eCommerce, Wishlist & Comparison
	- Select theme bistro
	- Go on the shop, customize & active all
	  except list view
	- Hover a product with a big description

	With some screen size the buttons are going
	out of the product box

Cause

	The box containing the buttons has an absolute
	position, when hovering the description is
	coming from the bottom and push the buttons
	box up.

	Since the buttons are large, some of them
	are wrapped and the box have a bigger height
	which causes the overflow.

Solution

	Reduce the buttons size for the problematic
	resolution.

OPW-2264350

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -93,6 +93,14 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
         .btn {
             transform: scale(0);
             transition: transform ease 200ms 0s;
+
+            @include media-breakpoint-down(lg) {
+                padding: 5px 9px;
+            }
+
+            @include media-breakpoint-down(xl) {
+                padding: 5px 20px;
+            }
         }
 
         &:empty {
